--- a/chi2012.tex
+++ b/chi2012.tex
@@ -251,7 +251,7 @@ The second finding is that equivalent properties were sometimes, though only rar
 
 Modelling heterogeneity was also comparatively rare, 
 
-Although not included in the table above, we also examined enumerated values for a number of the data sources above.  Field even as simple as ``Gender'' often disagreed in the 
+Although not included in the table above, we also examined the consistency in enumerated type ranges across data sources above.  Ranges of enumerated types for properties as seemingly simple as ``Gender'' disagreed among social networks; while Facebook allowed only ``Male'' and ``Female'' for values, Google+ included a third option,``other''.  ``Relationship status'' was another for which a majority of the values had correspondences between platforms but there wer a number of unique values not present in the rest.
 
 %\section{Designing the DataPalette Interface}
 \section{Designing DataPalette : An Interface for Serendipitous Data Mixing}
