--- a/chi2012.tex
+++ b/chi2012.tex
@@ -245,11 +245,11 @@ Finally, we looked at fields that were equivalent, yet which could not be compar
 \subsubsection{Results}
 Table \ref{tbl:prestudy2} displays the raw results of the process just described.  A number of features were quite striking about the data. First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest; in particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories. 
 
-Looking at equivalent properties, we foun overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these 'unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties one would expect to find in a record that were simply not present.  Only one of the music data providers, Spotify, included information about the album(s) that featured a particular song.  Such omissions show us that these data APIs reflect each service provider's own capabilities and internal data representations very specifically, and that integrating data such records from multiple sources could allow more complete and useful representations to be assembled.
+Looking at equivalent properties, we foun overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these 'unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply not present.  Only one of the music data providers, Spotify, included information about the album(s) that featured a particular song.  Such omissions show us that these data APIs reflect each service provider's own capabilities and internal data representations very specifically, and that integrating data such records from multiple sources could allow more complete and useful representations to be assembled.
 
-The second finding is that equivalent properties were sometimes, though only rarely, given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modeled as a subtree in the other.  We also encountered, particularly in the Weather category, examples of fields which had data embedded in textual description fields, which hints their intended use in RSS and other feed readers than as stuctured data feeds.  
+The second finding is that equivalent properties were sometimes, though only rarely, given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modeled as a subtree in the other.  We also encountered, particularly in the Weather category, examples of fields which had data nested in textual description fields, which hints their intended use in RSS and other feed readers than as stuctured data feeds.  
 
-Modelling heterogeneity was also comparatively rare, 
+Examples of modelling/semantic heterogeneity instances were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site; ``Promotions'' versus ``Offers'', 
 
 Although not included in the table above, we also examined the consistency in enumerated type ranges across data sources above.  Ranges of enumerated types for properties as seemingly simple as ``Gender'' disagreed among social networks; while Facebook allowed only ``Male'' and ``Female'' for values, Google+ included a third option,``other''.  ``Relationship status'' was another for which a majority of the values had correspondences between platforms but there wer a number of unique values not present in the rest.
 
