--- a/chi2012.tex
+++ b/chi2012.tex
@@ -227,7 +227,7 @@ weather			& weatherbug		& 8						& 2						& wu: 5, y: 5		& wu: 5, y: 5				& wu: 
 (forecasts)		& wundergound	& 52						& 1.38					& y:12			& y:12					& y:7						& y:3 \\
 				& yahoo weather	& 22						& 1.58					&				&						&						& \\
 \end{tabular}
-\caption{\emph{PS.2 Results} - Analysis of heterogeneity present across data feeds, by category of feed}\label{tbl:prestudy2}
+\caption{\emph{PS.2 Analysis of Data Feeds} - Structural statistics about data sampled from each API organized by category.  The first column lists the category and type of data record that was examined.  Cols 3 and 4 list the average number of properties per data record, and number of levels from root to leaf. The remaining fields show results from a pairwise analysis of data records from each of the data sources with those of the others in each category; values are prefixed with the first letter(s) of the target schema the row schema was compared against. For example ``Tw:5'' in the 5th column of Google+ row indicates that Facebook and Twitter records had 5 equivalent fields. }\label{tbl:prestudy2}
 \end{table*}
 
 
