intro tweaks and foo bar

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -265,3 +265,12 @@ time,...}},
   year={2009},
   organization={Citeseer}
 }
+
+@article{alani2007unlocking,
+  title={Unlocking the potential of public sector information with semantic web technology},
+  author={Alani, H. and Dupplaw, D. and Sheridan, J. and O’Hara, K. and Darlington, J. and Shadbolt, N. and Tullo, C.},
+  journal={The Semantic Web},
+  pages={708--721},
+  year={2007},
+  publisher={Springer}
+}
