--- a/chi2012.tex
+++ b/chi2012.tex
@@ -180,12 +180,12 @@ The second pre-study focused on the characteristics of the data available from t
 \subsection{PS.1 - Understanding Data Diversity in Everyday Tasks}
 We designed a semi-structured interview about tasks people performed online that required the use of multiple websites, and the processes people used to perform such tasks.  We analysed the data collected from this study using a thematic approach.  In our pre-study, we investigated the types of tasks people performed online that required heterogeneous data sources, and which tools they would use to organise a social event involving around 15 people.  We planned to interview 8 participants, using a general interview guide approach based on a set of questions.  This approach allowed the interviewer to adapt the interview to the participant's experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained in the purpose of the study and to minimise bias.
 
+\subsubsection{Results - Heterogeneous Data Tasks}
+The participant demographic consisted of 8 people (7 male and 1 female). They were split evenly into two age groups of 18-25 and 26-32.  
 
-\subsubsection{Results}
-The participant demographic consisted of 8 people (7 male and 1 female).  They were split evenly into two age groups of 18-25 and 26-32.  All but one participant reported they used social network sites very regularly (many times a day); they said they either logged in multiple times a day, left a website page open or used dedicated application for their social networking site updates.  Those that used social networking websites primarily used Facebook.  All of the participants used Twitter to listen to broadcasted tweets, and 6 out of 8 people regularly tweeted.  The following two sections, describe the tasks people perform online with heterogeneous data and how they would use to organise a large social event.
-
-\subsubsection{Question 1: Heterogenous Data Tasks}
-All participants reported having used multiple websites to accomplish a task.  They listed example tasks such as shopping (including food, consumer electronics, hotels and flights), choosing restaurants, searching for jobs, when choosing a university, choosing recipes, study and work.  The biggest focus for shopping focused tasks was balancing price, quality and speed of delivery.  In general, people did not not trust a single websites for reviews because they said that they could be biased and did not always review the features they were interested in.  One participant said that video reviews of items were really important because they showed the aesthetics and scale of the item.  In general for initial research into organising a task it was typical to Google keywords to find related websites to their tasks.  They identified that they used different website for different jobs, such as manufacturers website for technical details, review aggregators for a range of opinions, and Google maps for location based decisions.  Social networks were also identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
+% All but one participant reported they used social network sites very regularly (many times a day); they said they either logged in multiple times a day, left a website page open or used dedicated application for their social networking site updates.  Those that used social networking websites primarily used Facebook.  All of the participants used Twitter to listen to broadcasted tweets, and 6 out of 8 people regularly tweeted.  The following two sections, describe the tasks people perform online with heterogeneous data and how they would use to organise a large social event.
+% \subsubsection{Question 1: Heterogenous Data Tasks}
+All participants regularly using multiple websites to accomplish tasks.  Example of such tasks included shopping (including food, consumer electronics, hotels and flights), choosing restaurants, searching for jobs, selecting a university, seeking recipes, and finding answers to technical problems.  The biggest focus for shopping focused tasks was balancing price, quality and speed of delivery.  In general, people did not not trust single websites for reviews because they said that they could be biased and did not always review the features they were interested in.  One participant said that video reviews of items were really important because they showed the aesthetics and scale of the item.  In general, for initial research into organising a task, it was typical to use Google to search for several related websites.  They identified that they used different websites for different jobs, such as manufacturers website for technical details, review aggregators for a range of opinions, and Google maps for location-based decisions.  Social networks were also identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
 
 \subsubsection{Question 2: Process Used to Organise a Large Social Event}
 All of the participants would organise a large social event by talking to their friends, about their ideas, preferences and recommendations.  The tools they would use to acquire this information included face-to-face, phone calls, email, Skype, Facebook events.  The method chosen depended on the time scale required to organise an event, in general if there was a short time scale people would speak in person or on the phone.  Otherwise, people would set up a Facebook event page to discuss ideas with their friends.  If their friends were not on Facebook they would email them.  All but one participant said they would not use Doodle\footnote{Doodle - \emph{www.doodle.com}} to the organise day and time of an event, because they felt that people did not fill in the form and it was more suit to organising work events.  
@@ -319,7 +319,7 @@ To remain consistent with the drag-and-drop interactions used throughout the int
 By making such consolidation user-driven, we gave the user freedom to combine things when it suited him or her. As we saw in the system evaluation, while in certain circumstances users preferred combining representations, in others people preferred to keep things separate.  Thus, user-initiated consolidation afforded an additional flexibility that was ultimately deemed beneficial.
 
 \subsubsection{Enumerated-type value consolidation}
-Related to the concept of co-reference, PS.2 revealed that enumerated values of properties were often inconsistent, e.g. ``Casual dining'' vs ``Relaxed'' for a restaurant's ``atmosphere'' property. To reconcile and consolidate corresponding values from different  datasources, we extended the drag and drop support of co-reference combination to also allow users to drag and drop to combine enumerated literal values as well.  
+PS.2 revealed that enumerated values of properties were often inconsistent, e.g. ``Casual dining'' vs ``Relaxed'' for a restaurant's ``atmosphere'' property. To reconcile and consolidate corresponding values from different  datasources, we extended the drag and drop support of co-reference combination to also allow users to drag and drop to combine enumerated literal values as well.  
 
 \subsubsection{``Do What I Mean'' Visualisation}
 
@@ -371,7 +371,7 @@ We first describe our methodology, starting with the three hypotheses we set out
 To test these hypotheses, we designed a within-subjects lab-based A-B study in which participants were asked to perform two predefined tasks in separate timed trials, once with the DP interface (``condition A'') and once with a baseline interface (``condition B'' which we describe below).  We used upon the within-subjects A-B format in order to make both quantitative measurements about an individual's performance with DP (relative to baseline), but also to make qualitative observations of the processes used by each participant as they solved each task.  Each task was paired with one of two datasets, depending on condition, so that we could evaluate whether the participant's performance of completing a task differed with different datasets.  Conditions and interface order were fully counterbalanced among participants to eliminate ordering and task bias.  
 
 % why? why were these tasks selected? can we drop in the phrase ``multi-dimensional subjective choice task'' and refer back to PS.1 to justify the choice of tasks?
-We based our two tasks on choosing a university and picking a restaurant for a large social event, because in PS.1 the majority of people stated that they had used multiple websites for these tasks.  We used different two different variables for both tasks, where the restaurant was located (Glasgow and Cambridge) and which subject people choose (sport science and history).  The cities Glasgow and Cambridge were chosen because they are not geographically close to the participants, they are two heavily populated areas that have a choice of restaurants, and they contained detail data about the same restaurants on various review sites.  When deciding on which cities to use, we found that different areas favoured different review websites and places such as Hull had sets of disjoint sets of restaurant reviews.  We selected the top restaurants for on Tripadvisor and Yelp, because they were the top two websites people quoted for comparing reviews when travelling.  We selected the two university courses at random from a list taken form the complete university guide\footnote{}, and selected the top six university for that subject because they provide a realistic shortlist and are comparable in terms of rankings and properties.   We selected a shortlist of six because it is typical for users to narrow down their options to a limited selection before analysing the details of their final choice.
+We based our two tasks on choosing a university and picking a restaurant for a large social event, because in PS.1 the majority of people stated that they had used multiple websites for these tasks.  We used different two different variables for both tasks, where the restaurant was located (Glasgow and Cambridge) and which subject people choose (sport science and history).  The cities Glasgow and Cambridge were chosen because they are not geographically close to the participants, they are two heavily populated areas that have a choice of restaurants, and they contained detail data about the same restaurants on various review sites.  When deciding on which cities to use, we found that different areas favoured different review websites and places such as Hull had sets of disjoint sets of restaurant reviews.  We selected the top restaurants for on Tripadvisor and Yelp, because they were the top two websites people quoted for comparing reviews when travelling.  We selected the two university courses at random from a list taken form the complete university guide\footnote{The Complete University Guide - \url{www.thecompleteuniversityguide.co.uk}}, and selected the top six university for that subject because they provide a realistic shortlist and are comparable in terms of rankings and properties.   We selected a shortlist of six because it is typical for users to narrow down their options to a limited selection before analysing the details of their final choice.
 
 \subsubsection{Task preparation}
 % how data was prepared for each of the tasks; exactly how the A condition was done (full screen DP in a web browser, no outside access to apps),  B condition and why
@@ -526,7 +526,6 @@ Various difficulties were also encountered with use of the websites. There was s
 
 \subsection{Survey Results}
 
-
 \begin{figure}[tbp]
 \begin{center}
 \includegraphics[width=7.5cm]{img/survey}
@@ -560,35 +559,23 @@ Properties are tricky. Sometimes you don’t care [which data source] a property
 
 Pertaining to h2, all participants were able to work with multiple sets of heterogeneous data effectively.  With respect to integration specifically, a majority (80\%) of the particiapnts successfully and deliberately integrated data using drag-and-drop SameAs capabilities.  While single-paths were used, multi-path features were not as widely used, only by 4 participants. We believe that participants may not have realized that creating multiple path selections per group was possible, instead assuming it to be similar to the single ``Current path'' state per window of most file managers. 
 
-
 Assessing whether DP's improved task performance (h3) was the most difficult to ascertain, given the small sample size of our study and large number of factors influencing each person's performance.  While tasks were completed on average slightly faster than the control interface, these differences were not statistically significant.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that people were looking at more diverse information than the control conditions.  We also found that participants justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP, which strongly indicates that DP made the task easier to complete.
-
 
 %% -> discussion and limitations
 \subsection{Design Limitations}
 
-In addition to the aforementioned feature requests, we observed a number of ``pain points'' in the design of the interface that we wish to address in the next iteration.  One such pain point was window layout and screen real estate management; participants were prone to opening up a large number of windows, including maps and charts, and found that the screen filled up very quickly.  When the screen got crowded, two problems were observed: people spent a lot of time arranging and moving windows about, and second, people tended to get lost in windows -- ``what was this again?''
+In addition to the aforementioned feature requests, we observed a number of ``pain points'' in the design of the interface that we wish to address in the next iteration.  One such pain point was window layout and screen real estate management; participants were prone to opening up a large number of windows, including maps and charts.  When their screen started to fill up, we found that participants spent a lot of time arranging windows, and second, that people tended to forget what each window represented -- ``what was this again?''.  We plan to address these issue in the next version of DataPalette. 
 
-\subsection{More Integration Support}
+\subsection{Integration Support}
+
+A key design decision we made at the outset was to target the most common, simpler forms of heterogeneity we observed in PS.2.  Given the use of theinterface mechanisms we observed, we wish to next broaden the scope of capabilities of DP so that it can become more useful in real settings.  Among the integration capabilities we are considering are, first, field combination and splitting (by delimiters), in order to address the kinds of structural heterogeneity observed in several cases of PS.2, along with a framework for converting and reconciling units of measure, which would address several of the modelling issues.  Extending the Do What I Mean capabilities of the histogram and bar-charting tools to be unit-aware would be a tremendous asset, we believe, for users who want to quickly compare things without paying close attention to the units used.  A core problem to realising this, however, is that few data sources (besides the Weather category) explicitly annotated values with units used.  
+
+\subsection{Study limitations}
+
+% \subsection{Integration Limitations}
 
 % In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
 
-\subsection{Supporting more sophisticated heterogeneity}
-
-Supporting better structural heterogeneity:
-   Combining fields
-   Splitting fields
-   Rearranging fields (British dates American dates)
-   
-Modelling heterogeneity (?)
-   Specificity  
-     Education+Jobs vs ``Education'' + ``Jobs'' 
-
-   Unit conversion (kg -> stones)
-   Granularity
-     Crimes per area
-
-Working with data values
 
 %% \subsection{Better Supporting the Task}
 
