--- a/chi2012.tex
+++ b/chi2012.tex
@@ -99,7 +99,9 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-Exploratory sequential mixed-method study
+%% While people often draw upon diverse sources of information in the course of common tasks, tool support for integrating information from diverse information sources remains scarce. This paper presents an exploratory, sequential mixed-method study of user-driven data integration methods for PIM tools...
+
+exploratory, sequential mixed-method study of 
 \end{abstract}
 
 \keywords{}
