Shortening and polishing PS2 section.

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -243,17 +243,17 @@ weather			& weatherbug		& 8						& 2						& wu: 5, y: 5		& wu: 5, y: 5				& wu: 
 \subsection{PS.2 - Technical Challenges of Data Integration}
 Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To increase the variety of sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2-5 sources from each, for a total of 20.  
 
-For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for music sites this was song info, etc.  
+For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for retail sites this was product info, etc.
 %Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  
-For each such data record, two simple complexity metrics were computed: an \emph{average width} and \emph{average depth} of record.  Determining the width required first finding the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record had few attributes about the actual product compared to its ``ItemAttributes'' sub-property, which was used instead. 
+For each such data record, two simple complexity metrics were computed: the \emph{average width} and \emph{average depth}.  Determining the width required first finding the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record had few attributes about the actual product compared to its ``ItemAttributes'' sub-property, which was used instead. The average depth was simply the mean depth to each leaf node from the chosen comparison level.
 % This step was done manually, with an effort to select most similar components for comparison.  
 % Depth was computed as the average number of levels from record root to leaves across all properties, and was measured, with width, to convey the overall size/complexity of each record.
 
 The third metric measured the amount of overlap among the sources in each category.  This was done by determining \emph{equivalent properties} between schemas, which we did manually by creating an alignment table for all properties across all data sources in each category.  Each row of the alignment table comprised a property of a record from one data source, and all its closest matching properties from the others.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions; two properties were aligned if they seemed to model the same piece of information.
 
-Once the equivalent properties were established, equivalent properties were examined to see if they were named identically.  Then, ignoring property name, we looked to see if its values were structurally comparable.  If two fields were of the same data type and, if complex, had equivalent subfields, they were considered comparable; otherwise they were considered \emph{structurally inconsistent}.  An example of such a structural inconsistency were``birthday'' fields in Facebook and LinkedIn; Facebook represented it as a single string formatted ``MM/DD/YYYY'', while LinkedIn represented it as a sub-structure with separate ``Month'', ``Day'' and ``Year'' subfields.  
+Once established, equivalent properties were examined firstly for naming inconsistancies.  Then, ignoring property name, we looked at whether the values were structurally comparable; if two fields were of the same data type and, if complex, had structurally equivalent subfields, they were considered comparable, otherwise they were considered \emph{structurally inconsistent}.  The ``birthday'' fields in Facebook and LinkedIn demonstrate structural inconcistancy; Facebook represents birthdays as a single string formatted ``MM/DD/YYYY'', while the LinkedIn representation is a sub-structure with separate ``Month'', ``Day'' and ``Year'' subfields.
 
-Finally, we examined fields that were equivalent but not be compared for reasons other than the structural or terminological reasons just described.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to, the following: measurement unit inconsistencies, measurement method (e.g., dewpoint vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').
+Finally, we examined equivalent fields which were incomparabe for reasons other than structural or terminological differences.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dewpoint vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').
 
 \subsubsection{Results}
 Table \ref{tbl:prestudy2} displays the raw results of the process just described.  A number of features were quite striking about the data. First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest; in particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories. 
