Polished and shortened first two paragraphs in prestudies section.

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -174,9 +174,11 @@ A number of research PIM systems have demonstrated a great number of ways that u
 
 %% not sure where this goes >> but i want to keep it
 
-We performed an exploratory sequential mixed-method study to help us design our contribution. For our first pre-study, we first sought an updated understanding of how and whether people still used multiple information sources regularly when they sought information on the Web. There were two reasons for this inquiry; first, whether people were increasingly either relying only on the handful of the massive ``supersites'' (Facebook, Google, Wikipedia) for most of their activities, or searching across distributed sources of information.  If this were the case, much of the benefit could be gained by merely integrating PIM tools with the handful of sites, rather than the substantially more challenging problem of integrating data from arbitrary information sources on the Web.   Second, whether people relied on multiple sites and why.  If they did what kinds of tasks did people required diverse information collection and were these kinds of tasks rare?  If so, this would suggest that perhaps specialised interfaces could be concocted for this purpose rather than it being a PIM need. 
+We performed an exploratory sequential mixed-method study to help us design our contribution. For our first pre-study, we sought an updated understanding on the use of multiple information sources in information gathering on the Web. There were two driving questions behind this inquiry; first, were people increasingly relying only on a handful of ``supersites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small numbr of supersites would provide greater benefit than tackling the substantially more challenging problem of integrating data from arbitrary sources on the Web.  Second, why did people choose a single or multiple sources for information gathering?  If a number of websites were used, why was this preferred over a single source?
 
-The second pre-study focused on the characteristics of the data available from the kinds of sites used by the first pre-study's participants for the tasks described. The purpose of this follow-on  was to identify not specific characteristics of particular sites in question, but to identify, in general, the degree of complexity of the data feeds currently available across a variety of domains, and typical integration problems that might arise when mixing this data. The next two sections, we present our methodologies and results for our pre-studies.
+% If they did what kinds of tasks did people required diverse information collection and were these kinds of tasks rare?  If so, this would suggest that perhaps specialised interfaces could be concocted for this purpose rather than it being a PIM need. 
+
+The second pre-study focused on the characteristics of the data available from the kinds of sites used by the first pre-study's participants for the tasks described. The purpose of this follow-on was not to identify specific characteristics of particular sites in question, but to identify, in general, the degree of complexity of the data feeds currently available across a variety of domains, and typical integration problems that might arise when mixing this data.  In the next two sections, we present our methodologies and results for our pre-studies.
 
 
 \subsection{PS.1 - Understanding Data Diversity in Everyday Tasks}
