--- a/chi2012.tex
+++ b/chi2012.tex
@@ -100,8 +100,7 @@ breaklinks=true,
 
 \begin{abstract}
 %% While people often draw upon diverse sources of information in the course of common tasks, tool support for integrating information from diverse information sources remains scarce. This paper presents an exploratory, sequential mixed-method study of user-driven data integration methods for PIM tools...
-
-exploratory, sequential mixed-method study of 
+%% exploratory, sequential mixed-method study of 
 \end{abstract}
 
 \keywords{}
@@ -557,9 +556,9 @@ In the exit survey, the users noted that they would use an interface like DataPa
 
 In this section, we first re-visit our study hypotheses introduced in Methodology, using observations from results to support views on each.  We follow this with a discussion of limitations regarding the design of the interface, the state of the prototype, and the design and execution of the study.  Finally, we discuss our current and follow-on plans for continuing this line of research.
 
-\subsection{Revisiting the hypotheses: Does DataPalette facilitate serendipitous data integration?}
+\subsection{Does DataPalette facilitate serendipitous data integration?}
 
-We set out to answer three different questions with the DataPalette study. The first concerned whether people understood and could use the system (h1), whether the system enabled people to mix and integrate heterogeneous data (h2), and whether the interface facilitated task completion (h3).  Using real data obtained from typical data sources identified during our prestudy (PS.1), we tested the DP prototype and its integration interaction mechanisms with ``real'' users, who were students, staff and alumni of our University who had varying backgrounds and levels of expertise with computers.
+We set out to test three hypotheses with the DataPalette study. The first was that end-user citizens would understand the interface mechanisms of DP (h1).  The second, h2, was that DP enables people to mix and integrate heterogeneous data in the process of performing their tasks.  The third, h3, was that using DP facilitatedp task completion (h3).  Using real data obtained from typical data sources identified during our prestudy (PS.1), we tested the DP prototype and its integration interaction mechanisms with ``real'' users, who were students, staff and alumni of our University who had varying backgrounds and levels of expertise with computers.
 
 We find substantial support for h1. All participants reported that they understood the tool, and that it was easy to use.   All participants managed to use the interface to view, organize and collate data without running into major roadblocks or confusion, and all effectively were able to compare multiple attributes of heterogeneous data items directly.  More than half of the participants used DP's visualisation features (charting or map -- often several times during the trial -- suggesting that these features were useful and usable as well.  
 
