--- a/chi2012.tex
+++ b/chi2012.tex
@@ -184,7 +184,7 @@ The second pre-study focused on the characteristics of the data available from t
 % Rewritten with paragraph below; feel free to revert, or delete this if you're happy, or whatever.
 % We designed a semi-structured interview about tasks people performed online that required the use of multiple websites, and the processes people used to perform such tasks.  We analysed the data collected from this study using a thematic approach.  In our first pre-study, we investigated the types of tasks people performed online that required heterogeneous data sources, and which tools they would use to organise a social event involving around 15 people.  We planned to interview 8 participants, using a general interview guide approach based on a set of questions.  This approach allowed the interviewer to adapt the interview to the participant's experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained in the purpose of the study and to minimise bias.
 
-For the first prestudy, we designed and ran a semi-structured interview to discover the processes and tools people would use when combining data from multiple websites. We interviewed 8 participants and asked them a range of questions regarding their use of multiple websites in gathering information. We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
+For the first prestudy, we conducted a semi-structured interview to understand the reasons and ways that people drew information from diverse information sources. We interviewed 8 participants, asking them to identify tasks that performed recently that required use of multiple information sources, the kinds of sources used, and the tools used to manage the resulting information.  We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
 
 \subsubsection{Results - Heterogeneous Data Tasks}
 The participants, recruited informally via word of mouth, consisted of 7 male and 1 female. They were split evenly into two age groups of 18-25 and 26-32.   
