--- a/chi2012.tex
+++ b/chi2012.tex
@@ -99,7 +99,8 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-%% While people often draw upon diverse sources of information in the course of common tasks, tool support for integrating information from diverse information sources remains scarce. This paper presents an exploratory, sequential mixed-method study of user-driven data integration methods for PIM tools...
+While people naturally draw upon diverse sources of information while problem solving and making decisions, tool support for serendipitous data mixing in Personal Information Management tools remains mostly absent. This paper presents an exploratory, sequential mixed-method study of user-driven data integration methods for PIM tools...
+%% We find that the ``light-touch'' data integration mechanisms introduced allow people to effectively work with and combine information from multiple sources, and more thoroughly justify their choices 
 %% exploratory, sequential mixed-method study of 
 \end{abstract}
 
