--- a/chi2012.tex
+++ b/chi2012.tex
@@ -188,13 +188,17 @@ The second pre-study focused on the characteristics of the data available from t
 For the first prestudy, we designed and ran a semi-structured interview to discover the processes and tools people would use when combining data from multiple websites. We interviewed 8 participants and asked them a range of questions regarding their use of multiple websites in gathering information. We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
 
 \subsubsection{Results - Heterogeneous Data Tasks}
+
 The participants, recruited informally via word of mouth, consisted of 7 male and 1 female. They were split evenly into two age groups of 18-25 and 26-32.   
 % mention # that were computer scientists here?
 
-% not so relevant:
-% All but one participant reported they used social network sites very regularly (many times a day); they said they either logged in multiple times a day, left a website page open or used dedicated application for their social networking site updates.  Those that used social networking websites primarily used Facebook.  All of the participants used Twitter to listen to broadcasted tweets, and 6 out of 8 people regularly tweeted.  The following two sections, describe the tasks people perform online with heterogeneous data and how they would use to organise a large social event.
-% \subsubsection{Question 1: Heterogenous Data Tasks}
-All participants regularly using multiple websites to accomplish tasks.  Example of such tasks included shopping (including food, consumer electronics, hotels and flights), choosing restaurants, searching for jobs, selecting a university, seeking recipes, and finding answers to technical problems.  The biggest focus for shopping focused tasks was balancing price, quality and speed of delivery.  In general, people did not not trust single websites for reviews because they said that they could be biased and did not always review the features they were interested in.  One participant said that video reviews of items were really important because they showed the aesthetics and scale of the item.  In general, for initial research into organising a task, it was typical to use Google to search for several related websites.  They identified that they used different websites for different jobs, such as manufacturers website for technical details, review aggregators for a range of opinions, and Google maps for location-based decisions.  Social networks were also identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
+\subsubsection{Question 1: Heterogenous Data Tasks}
+
+All participants reported regular use of multiple websites to accomplish tasks, examples of which including: shopping (including food, consumer electronics, hotels and flights), choosing restaurants, job-seeking, selecting a university, seeking recipes, and finding answers to technical problems.  When beginning a task, it was common for participants to use Google to discover several related websites, which would then be used in different ways depending on the task at hand. For shopping-oriented tasks, balancing price, quality and speed of delivery was the main aim.  For product reviews, single sources were not trusted due to possible bias and incomplete feature coverage.  
+% Jim - Not sure if this is relevant. If it is, put it back in.
+% one participant said that video reviews of items were particularly helpful, as the aesthetics and scale of the item could be seen.
+% Social networks were identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
+To provide a full coverage of information, websites of different types were used, such as manufacturers website for technical details, review aggregators for a range of opinions, and Google maps for location-based decisions.
 
 \subsubsection{Question 2: Process Used to Organise a Large Social Event}
 Participants said they would organise a large social event by first conferring with friends about their ideas, preferences and recommendations.  They selected venues, locations, restaurants and activities through a number of sources: their own prior experience, friends' recommendations, searching Google maps, dedicated reviews sites (such as Yelp for restaurants), and through web search.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event, the weather was not that important because they did not trust the accuracy of predictions.  Also, friends' preferences in price and food choices were not seen a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
