--- a/chi2012.tex
+++ b/chi2012.tex
@@ -184,19 +184,19 @@ The second pre-study focused on the characteristics of the data available from t
 % Rewritten with paragraph below; feel free to revert, or delete this if you're happy, or whatever.
 % We designed a semi-structured interview about tasks people performed online that required the use of multiple websites, and the processes people used to perform such tasks.  We analysed the data collected from this study using a thematic approach.  In our first pre-study, we investigated the types of tasks people performed online that required heterogeneous data sources, and which tools they would use to organise a social event involving around 15 people.  We planned to interview 8 participants, using a general interview guide approach based on a set of questions.  This approach allowed the interviewer to adapt the interview to the participant's experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained in the purpose of the study and to minimise bias.
 
-For the first prestudy, we conducted a semi-structured interview to understand the reasons and ways that people drew information from diverse information sources. We interviewed 8 participants, asking them to identify tasks that performed recently that required use of multiple information sources, the kinds of sources used, and the tools used to manage the resulting information.  We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
+For the first pre-study, we conducted a semi-structured interview to understand the reasons and ways that people drew information from diverse information sources. We interviewed 8 participants, asking them to identify tasks that performed recently that required use of multiple information sources, the kinds of sources used, and the tools used to manage the resulting information.  We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
 
 \subsubsection{Results - Heterogeneous Data Tasks}
-The participants, recruited informally via word of mouth, consisted of 7 male and 1 female. They were split evenly into two age groups of 18-25 and 26-32.   
+The participants, recruited informally via word of mouth, consisted of 7 male and 1 female. They were split evenly into two age groups of 18--25 and 26--32.   
 % mention # that were computer scientists here?
 
 % not so relevant:
 % All but one participant reported they used social network sites very regularly (many times a day); they said they either logged in multiple times a day, left a website page open or used dedicated application for their social networking site updates.  Those that used social networking websites primarily used Facebook.  All of the participants used Twitter to listen to broadcasted tweets, and 6 out of 8 people regularly tweeted.  The following two sections, describe the tasks people perform online with heterogeneous data and how they would use to organise a large social event.
 % \subsubsection{Question 1: Heterogenous Data Tasks}
-All participants regularly using multiple websites to accomplish tasks.  Example of such tasks included shopping (including food, consumer electronics, hotels and flights), choosing restaurants, searching for jobs, selecting a university, seeking recipes, and finding answers to technical problems.  The biggest focus for shopping focused tasks was balancing price, quality and speed of delivery.  In general, people did not not trust single websites for reviews because they said that they could be biased and did not always review the features they were interested in.  One participant said that video reviews of items were really important because they showed the aesthetics and scale of the item.  In general, for initial research into organising a task, it was typical to use Google to search for several related websites.  They identified that they used different websites for different jobs, such as manufacturers website for technical details, review aggregators for a range of opinions, and Google maps for location-based decisions.  Social networks were also identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
+All participants regularly use multiple websites to accomplish tasks.  Example of such tasks included shopping (including food, consumer electronics, hotels and flights), choosing restaurants, searching for jobs, selecting a university, seeking recipes, and finding answers to technical problems.  The biggest focus for shopping-focused tasks was balancing price, quality and speed of delivery.  In general, people did not not trust single websites for reviews because they said that they could be biased and did not always review the features they were interested in.  One participant said that video reviews of items were really important because they showed the aesthetics and scale of the item.  In general, for initial research into organising a task, it was typical to use Google to search for several related websites.  They identified that they used different websites for different jobs, such as manufacturers websites for technical details, review aggregators for a range of opinions, and Google maps for location-based decisions. %  Social networks were also identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
 
-\subsubsection{Question 2: Process Used to Organise a Large Social Event}
-Participants said they would organise a large social event by first conferring with friends about their ideas, preferences and recommendations.  They selected venues, locations, restaurants and activities through a number of sources: their own prior experience, friends' recommendations, searching Google maps, dedicated reviews sites (such as Yelp for restaurants), and through web search.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event, the weather was not that important because they did not trust the accuracy of predictions.  Also, friends' preferences in price and food choices were not seen a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
+%\subsubsection{Question 2: Process Used to Organise a Large Social Event}
+Participants said they would organise a large social event by first conferring with friends about their ideas, preferences and recommendations.  They selected venues, locations, restaurants and activities through a number of sources: their own prior experience, friends' recommendations, searching Google maps, dedicated reviews sites (such as Yelp for restaurants), and through web search.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event, the weather was not that important because they did not trust the accuracy of predictions.  Also, friends' preferences in price and food choices were not seen as a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
 
 %% Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend's recommendations, Google maps, reviews obtained through web search and sites such as TripAdvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event the weather was not that important because they did not trust the accuracy of predictions.  Also, their friend's preferences in price and food choices were not a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
 % previous
