Couple of little grammatical/spelling fixes before working on a paragraph.

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -173,7 +173,7 @@ A number of research PIM systems have demonstrated a great number of ways that u
 
 %% not sure where this goes >> but i want to keep it
 
-We performed an exploratory sequential mixed-method study to help us design our contribution. For our first pre-study, we sought an updated understanding on the use of multiple information sources in information gathering on the Web. There were two driving questions behind this inquiry; first, were people increasingly relying only on a handful of ``supersites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small numbr of supersites would provide greater benefit than tackling the substantially more challenging problem of integrating data from arbitrary sources on the Web.  Second, why did people choose a single or multiple sources for information gathering?  If a number of websites were used, why was this preferred over a single source?
+We performed an exploratory sequential mixed-method study to help us design our contribution. For our first pre-study, we sought an updated understanding on the use of multiple information sources in information gathering on the Web. There were two driving questions behind this inquiry; first, were people increasingly relying only on a handful of ``supersites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of supersites would provide greater benefit than tackling the substantially more challenging problem of integrating data from arbitrary sources on the Web.  Second, why did people choose a single or multiple sources for information gathering?  If a number of websites were used, why was this preferred over a single source?
 
 % If they did what kinds of tasks did people required diverse information collection and were these kinds of tasks rare?  If so, this would suggest that perhaps specialised interfaces could be concocted for this purpose rather than it being a PIM need. 
 
@@ -184,11 +184,11 @@ The second pre-study focused on the characteristics of the data available from t
 % Rewritten with paragraph below; feel free to revert, or delete this if you're happy, or whatever.
 % We designed a semi-structured interview about tasks people performed online that required the use of multiple websites, and the processes people used to perform such tasks.  We analysed the data collected from this study using a thematic approach.  In our first pre-study, we investigated the types of tasks people performed online that required heterogeneous data sources, and which tools they would use to organise a social event involving around 15 people.  We planned to interview 8 participants, using a general interview guide approach based on a set of questions.  This approach allowed the interviewer to adapt the interview to the participant's experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained in the purpose of the study and to minimise bias.
 
-For the first prestudy, we conducted a semi-structured interview to understand the reasons and ways that people drew information from diverse information sources. We interviewed 8 participants, asking them to identify tasks that performed recently that required use of multiple information sources, the kinds of sources used, and the tools used to manage the resulting information.  We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
+For the first prestudy, we conducted a semi-structured interview to understand the reasons and ways that people drew information from diverse information sources. We interviewed 8 participants, asking them to identify tasks they performed recently that required use of multiple information sources, the kinds of sources used, and the tools used to manage the resulting information.  We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
 
 \subsubsection{Results - Heterogeneous Data Tasks}
 
-The participants, recruited informally via word of mouth, consisted of 7 male and 1 female. They were split evenly into two age groups of 18-25 and 26-32.   
+The 8 participants, recruited informally via word of mouth, consisted of 7 male and 1 female. They were split evenly into two age groups of 18-25 and 26-32.   
 % mention # that were computer scientists here?
 
 \subsubsection{Question 1: Heterogenous Data Tasks}
