--- a/carpedata.bib
+++ b/carpedata.bib
@@ -18,6 +18,15 @@
   publisher={ACM}
 }
 
+@inproceedings{halevy2006data,
+  title={Data integration: the teenage years},
+  author={Halevy, A. and Rajaraman, A. and Ordille, J.},
+  booktitle={Proceedings of the 32nd international conference on Very large data bases},
+  pages={9--16},
+  year={2006},
+  organization={VLDB Endowment}
+}
+
 @misc{haystack,
     abstract = {{The Resource Definition Framework (RDF) is designed to support
 agent communication on the Web, but it is also suitable as a
