--- a/chi2012.tex
+++ b/chi2012.tex
@@ -99,8 +99,8 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-While people naturally draw upon diverse sources of information while problem solving and making decisions, tool support for serendipitous data mixing in Personal Information Management tools remains mostly absent. This paper presents an exploratory, sequential mixed-method study of user-driven data integration methods for PIM tools...
-%% We find that the ``light-touch'' data integration mechanisms introduced allow people to effectively work with and combine information from multiple sources, and more thoroughly justify their choices 
+Although people naturally rely upon multiple, diverse information sources in the course of routine problem-solving and decision-making tasks, support for data integration in Personal Information Management (PIM) tools remains poor, if largely nonexistent. This paper presents an exploratory, sequential, mixed-method study of ways to extend PIM tools to support user-driven data integration while performing their primary tasks. We present results of two pre-study in which requirements, we designed and evaluated DataPalette.  
+% We find that the ``light-touch'' data integration mechanisms introduced allow people to effectively work with and combine information from multiple sources, and more thoroughly justify their choices 
 %% exploratory, sequential mixed-method study of 
 \end{abstract}
 
@@ -128,7 +128,7 @@ Third, we developed DataPalette, an interface that enables serendipitous ``data 
 In this section, we motivate our work using three fields: PIM, data integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, where consolidating and working with data from multiple sources has remained a challenge for over a decade. Enabling PIM tools to supporting ad-hoc data integration has remained difficult because of the complex, theoretically difficult nature of data heterogeneity; specifically, reconciling the differences that arise among representations when data is created by different people, at different times, for different purposes. As described by Alon Halvey:
 
 \begin{quote} 
-  The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{alonhalevy}.\looseness=-1
+  The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{halevy2006data}.\looseness=-1
 \end{quote}
 
 Recently, users are experiencing data fragmentation~\cite{Jones05towardsa} across multiple web-based applications and services, and struggle to consolidate across them~\cite{bergman,boardmansasse}.  In our own previously-conducted field study, (reference anonymised) we observed variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) to allow people to manage both online and offline data.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-maintained information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate their activities \cite{Voida:2011:HDC:1978942.1979078}.
@@ -562,7 +562,7 @@ In the exit survey, the users noted that they would use an interface like DataPa
 
 In this section, we first re-visit our study hypotheses introduced in Methodology, using observations from results to support views on each.  We follow this with a discussion of limitations regarding the design of the interface, the state of the prototype, and the design and execution of the study.  Finally, we discuss our current and follow-on plans for continuing this line of research.
 
-\subsection{Does DataPalette facilitate serendipitous data integration?}
+\subsection{Does DataPalette enable data integration?}
 
 We set out to test three hypotheses with the DataPalette study. The first was that end-user citizens would understand the interface mechanisms of DP (h1).  The second, h2, was that DP enables people to mix and integrate heterogeneous data in the process of performing their tasks.  The third, h3, was that using DP facilitatedp task completion (h3).  Using real data obtained from typical data sources identified during our prestudy (PS.1), we tested the DP prototype and its integration interaction mechanisms with ``real'' users, who were students, staff and alumni of our University who had varying backgrounds and levels of expertise with computers.
 
