--- a/carpedata.bib
+++ b/carpedata.bib
@@ -283,3 +283,14 @@ time,...}},
   year={2007},
   publisher={Springer}
 }
+
+@article{infoscraps,
+  title={Information scraps: How and why information eludes our personal information management tools},
+  author={Bernstein, M. and Van Kleek, M. and Karger, D. and Schraefel, MC},
+  journal={ACM Transactions on Information Systems (TOIS)},
+  volume={26},
+  number={4},
+  pages={24},
+  year={2008},
+  publisher={acm}
+}
